WP-7899 Research Results off alignment fixed

--- a/sass/conditionals/seed-research-project.sass
+++ b/sass/conditionals/seed-research-project.sass
@@ -92,6 +92,8 @@
       padding-top: 6px
       padding-bottom: 6px
       border-bottom: 1px solid #c4c4c4
+      display: inline-block
+      width: 100%
       .field-name-field-link-single 
         float: left
         display: inline-block
